<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity_user_role">


    <ImageView
        android:id="@+id/wave_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="-1dp"
        android:layout_marginEnd="0dp"
        android:contentDescription="@string/wave_top"
        android:scaleType="fitXY"
        android:src="@drawable/wave_top" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/wave_top"
        android:layout_marginEnd="2dp"
        android:src="@drawable/logo"
        android:contentDescription="@string/logo"/>

    <TextView
        android:id="@+id/logo_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logo"
        android:paddingTop="15dp"
        android:gravity="center"
        android:text="@string/logo_name"
        android:fontFamily="@font/lilita_one"
        android:textSize="50sp"
        android:textColor="@color/yellow"/>

    <TextView
        android:id="@+id/tagline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logo"
        android:gravity="center"
        android:paddingTop="90dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:text="@string/tagline"
        android:textColor="@color/blue"
        android:textSize="20sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/wavebottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom"
        android:layout_marginBottom="0dp"
        android:scaleType="fitXY"
        android:src="@drawable/wave_bottom"
        android:contentDescription="@string/wavebottom"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tagline"
        android:layout_marginTop="80dp"
       >

        <Button
            android:id="@+id/btn_student"
            android:layout_width="125dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="71dp"
            android:layout_marginEnd="43dp"
            android:layout_marginBottom="161dp"
            android:backgroundTint="@color/yellow"
            android:text="@string/btn_student"
            android:textSize="18sp"
            android:textStyle="bold"
            />

        <Button
            android:id="@+id/btn_teacher"
            android:layout_width="125dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="51dp"
            android:layout_marginBottom="160dp"
            android:backgroundTint="@color/brightred"
            android:text="@string/btn_teacher"
            android:textSize="18sp"
            android:textStyle="bold"/>


    </LinearLayout>

</RelativeLayout>