<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".activity_selecting_role">

    <ImageView
        android:id="@+id/wave_top"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="-1dp"
        android:contentDescription="@string/wave_top"
        android:scaleType="fitXY"
        android:src="@drawable/wave_top"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="2dp"
        android:contentDescription="@string/logo"
        android:src="@drawable/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/wave_top" />

    <TextView
        android:id="@+id/logo_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/lilita_one"
        android:gravity="center"
        android:paddingTop="15dp"
        android:text="@string/logo_name"
        android:textColor="@color/yellow"
        android:textSize="50sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo" />

    <TextView
        android:id="@+id/tagline"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="10dp"
        android:gravity="center"
        android:text="@string/tagline"
        android:textColor="@color/blue"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logo_name" />

    <ImageView
        android:id="@+id/wavebottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/wavebottom"
        android:scaleType="fitXY"
        android:src="@drawable/wave_bottom"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnStudent"
        android:layout_width="wrap_content"
        android:layout_height="61dp"
        android:layout_marginTop="40dp"
        android:backgroundTint="@color/yellow"
        android:onClick="ActivityCreateLogin"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:text="@string/btn_student"
        android:textSize="18sp"
        android:textStyle="bold"
        app:cornerRadius="50dp"
        app:layout_constraintEnd_toStartOf="@+id/btnTeacher"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tagline" />

    <Button
        android:id="@+id/btnTeacher"
        android:layout_width="wrap_content"
        android:layout_height="62dp"
        android:layout_marginTop="40dp"
        android:backgroundTint="@color/brightred"
        android:onClick="ActivityCreateLogin"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:text="@string/btn_teacher"
        android:textSize="18sp"
        android:textStyle="bold"
        app:cornerRadius="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toEndOf="@id/btnStudent"
        app:layout_constraintTop_toBottomOf="@+id/tagline" />

</androidx.constraintlayout.widget.ConstraintLayout>
